Bump client
