# api/openapi.yaml
@@ -1706,7 +1706,7 @@ components:
       example:
         access_token: eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6ImtjN2FjWmV4bHBvZk1QY3V6UF9HTyJ9.eyJpc3MiOiJodHRwczovL2hvcHBlci1hcGkuYXV0aDAuY29tLyIsInN1YiI6IlhVdWpRSlRCODFPdkVTODh1VDlPNHhIUzVNUkpZV2tCQGNsaWVudHMiLCJhdWQiOiJodHRwczovL3N0YWdpbmcuYXBpLmhvcHBlci5jb20iLCJpYXQiOjE2NTI5ODQ2ODEsImV4cCI6MTY1MzA3MTA4MSwiYXpwIjoiWFV1alFKVEI4MU92RVM4OHVUOU80eEhTNU1SSllXa0IiLCJzY29wZSI6ImFsbDpwcmljZWZyZWV6ZSBhbGw6Z2VuZXJhbCBhbGw6Y2ZhciIsImd0eSI6ImNsaWVudC1jcmVkZW50aWFscyJ9.VlKuMHJkGpOA-L9oJn-UBEOD7VdzLXQSn2DiTrlROR521uHupkRnI-_tDjYD-sygmNmI0bIb0UEQ2ETOyalFZICge8-qWpxBccM_rfgPemZ6Rs9fZSY8XjZtaM9sQEJ4OqwXQiIU0tQDVMfegj-4wnKglHAKzJ7X7wb05nSCP_g2cXIXL9mapnLT8vf609CZIz2cRuWvww5E9qlJ6mUQxsYBv9xwJoyF3IK8TCWUFFvu2xSendMltvUlCHJHjWpddFDTdkl1ErHq_ta-3e1n2ZjU1HVVux9dwWoZQDYJFprtDYjPS-jVhEljGMASB74zf_xbcWCwoa_HJlxLlhBhoQ
         scope: all:general all:cfar
-        token_type: token_type
+        token_type: Bearer
         expires_in: 86400
       properties:
         access_token:
@@ -1723,7 +1723,7 @@ components:
           format: int32
           type: integer
         token_type:
-          type: string
+          $ref: '#/components/schemas/token_type'
       required:
       - access_token
       - expires_in
@@ -7105,6 +7105,11 @@ components:
       - type
       title: tablet
       type: object
+    token_type:
+      enum:
+      - Bearer
+      title: token_type
+      type: string
     ui_source:
       enum:
       - banner_variant_a
@@ -7370,14 +7375,8 @@ components:
         Note that `access_token`s eventually expire, requiring a new token to be fetched.
 
         see [authentication](#tag/Authentication)
-      flows:
-        clientCredentials:
-          scopes:
-            all:general: Access all Session and Analytics APIs
-            all:cfar: Access all CFAR APIs
-            all:dg: Access all DG APIs
-          tokenUrl: /auth
-      type: oauth2
+      scheme: bearer
+      type: http
     SessionAuth:
       description: |
         # Header Parameters
