# src/Com.Hopper.Hts.Airlines/Model/TokenType.cs
@@ -1,0 +1,41 @@
+/*
+ * Airline API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1.1
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+
+using System;
+using System.Collections;
+using System.Collections.Generic;
+using System.Collections.ObjectModel;
+using System.Linq;
+using System.IO;
+using System.Runtime.Serialization;
+using System.Text;
+using System.Text.RegularExpressions;
+using Newtonsoft.Json;
+using Newtonsoft.Json.Converters;
+using Newtonsoft.Json.Linq;
+using System.ComponentModel.DataAnnotations;
+using OpenAPIDateConverter = Com.Hopper.Hts.Airlines.Client.OpenAPIDateConverter;
+
+namespace Com.Hopper.Hts.Airlines.Model
+{
+    /// <summary>
+    /// Defines token_type
+    /// </summary>
+    [JsonConverter(typeof(StringEnumConverter))]
+    public enum TokenType
+    {
+        /// <summary>
+        /// Enum Bearer for value: Bearer
+        /// </summary>
+        [EnumMember(Value = "Bearer")]
+        Bearer = 1
+    }
+
+}
